--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "antd": "^3.13.6",
     "axios": "^0.18.0",
+    "material-icons": "^0.3.0",
     "node-sass": "^4.11.0",
     "nuka-carousel": "^4.4.8",
     "prop-types": "^15.7.2",
