--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,8 @@
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.13.6",
     "axios": "^0.18.0",
+    "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^0.4.2",
     "node-sass": "^4.11.0",
     "nuka-carousel": "^4.4.8",
     "prop-types": "^15.7.2",
