--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-image-magnify": "^2.7.4",
     "react-items-carousel": "^2.3.0",
     "react-paginate": "^6.3.0",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2",
     "react-tabs": "^3.0.0",
     "react-transition-group": "^2.5.3",
     "reactstrap": "^7.1.0",
