--- a/derekApi/package.json
+++ b/derekApi/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
     "jest-webpack": "^0.5.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.14",
