--- a/derekApi/package.json
+++ b/derekApi/package.json
@@ -11,6 +11,7 @@
     "gridfs-stream": "^1.1.1",
     "jest-webpack": "^0.5.1",
     "jsonwebtoken": "^8.5.0",
+    "messagebird": "^2.4.1",
     "mongoose": "^5.4.14",
     "multer": "^1.4.1",
     "nodemon": "^1.18.10",
