--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,7 +29,8 @@
     "reactstrap": "^7.1.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^3.3.3333",
-    "victory": "^32.2.0"
+    "victory": "^32.2.0",
+    "victory-native": "^32.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
