--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.13.6",
     "axios": "^0.18.0",
+    "compression": "^1.7.4",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^0.4.2",
     "mdbreact": "^4.13.0",
